# Bootcamp_aula17.1

./: README.md  desafio.db  desafio.py  desafio_query.py  exemplo_aula17.py  pyproject.toml
